--- a/.github/workflows/send-status-email.yml
+++ b/.github/workflows/send-status-email.yml
@@ -44,7 +44,7 @@ jobs:
         run: npm install
 
       - name: Send test email to me
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'send_test')
         run: node scripts/send-email.mjs
         env:
           GMAIL_FROM_EMAIL: ${{ secrets.GMAIL_FROM_EMAIL }}
@@ -64,7 +64,7 @@ jobs:
           EMAIL_RECIPIENTS: ${{ secrets.EMAIL_RECIPIENTS }}
 
       - name: Post test email comment
-        if: github.event_name == 'pull_request' && success()
+        if: (github.event_name == 'pull_request' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'send_test')) && success()
         uses: actions/github-script@v7
         with:
           script: |
