--- a/.github/workflows/notion-status-report.yml
+++ b/.github/workflows/notion-status-report.yml
@@ -37,16 +37,15 @@ jobs:
       - name: Generate HTML report
         run: node scripts/generate-report.mjs
 
-      - name: Stage generated files
-        run: |
-          git add NOTION_PROJECT_STATUS.html data/notion-raw.json
-
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: 'chore: Update Notion status report'
           title: 'Status Report - ${{ github.event.repository.updated_at }}'
+          add-paths: |
+            NOTION_PROJECT_STATUS.html
+            data/notion-raw.json
           body: |
             ## Automated Status Report
 
