--- a/.github/workflows/notion-status-report.yml
+++ b/.github/workflows/notion-status-report.yml
@@ -42,6 +42,12 @@ jobs:
           echo "=== Files modified ==="
           git diff --name-only
           echo ""
+          echo "=== Diff for NOTION_PROJECT_STATUS.html ==="
+          git diff NOTION_PROJECT_STATUS.html | head -50
+          echo ""
+          echo "=== File line count ==="
+          wc -l NOTION_PROJECT_STATUS.html
+          echo ""
           echo "=== Git status ==="
           git status
 
